Add /etc/nagios-plugins to the exportable directories and support the max number of arg’s for nrpe by default.

--- a/data_dirs.env
+++ b/data_dirs.env
@@ -1,5 +1,6 @@
 i=0
 DATA_DIRS[((i++))]="/etc/naemon"
+DATA_DIRS[((i++))]="/etc/nagios-plugins"
 DATA_DIRS[((i++))]="/var/log/naemon"
 DATA_DIRS[((i++))]="/var/cache/naemon"
 DATA_DIRS[((i++))]="/var/lib/naemon"
