Include service and host message formatting support for jabber. Just looks nicer that way.

--- a/notify_jabber.cfg
+++ b/notify_jabber.cfg
@@ -1,40 +1,76 @@
 #
-# Notify by jabber command definitions. There are 4 to support the different 
+# Notify by jabber command definitions. There are 2 sets of commands support the different 
 # configurations used by sendxmpp, and all are fairly self-explanatory.
 #
 #
 # Note, the SSL versions turn off TLS verification by default
 #
-# notify-by-jabber-chatroom-ssl
-# notify-by-jabber-user-ssl
-# notify-by-jabber-chatroom
-# notify-by-jabber-user
+# host commands:
 #
+# notify-host-by-jabber-chatroom-ssl
+# notify-host-by-jabber-user-ssl
+# notify-host-by-jabber-chatroom
+# notify-host-by-jabber-user
+#
+# service commands:
+#
+# notify-service-by-jabber-chatroom-ssl
+# notify-service-by-jabber-user-ssl
+# notify-service-by-jabber-chatroom
+# notify-service-by-jabber-user
 
 define command {
-  command_name                   notify-by-jabber-chatroom-ssl
+  command_name                   notify-host-by-jabber-chatroom-ssl
   command_line                   /usr/bin/printf "%b" "Notification Type: $NOTIFICATIONTYPE$\nHost: $HOSTNAME$\nState: $HOSTSTATE$\nAddress: $HOSTADDRESS$\nInfo: $HOSTOUTPUT$\n\nComment:$NOTIFICATIONCOMMENT$" \
                                   | /usr/bin/sendxmpp -f /etc/naemon/sendxmpprc \
                                     --ssl --no-tls-verify --chatroom $CONTACTADDRESS1$
 }
 
 define command {
-  command_name                   notify-by-jabber-user-ssl
+  command_name                   notify-host-by-jabber-user-ssl
   command_line                   /usr/bin/printf "%b" "Notification Type: $NOTIFICATIONTYPE$\nHost: $HOSTNAME$\nState: $HOSTSTATE$\nAddress: $HOSTADDRESS$\nInfo: $HOSTOUTPUT$\n\nComment:$NOTIFICATIONCOMMENT$" \
                                   | /usr/bin/sendxmpp -f /etc/naemon/sendxmpprc \
                                     --ssl --no-tls-verify $CONTACTADDRESS1$
 }
 
 define command {
-  command_name                   notify-by-jabber-chatroom
+  command_name                   notify-host-by-jabber-chatroom
   command_line                   /usr/bin/printf "%b" "Notification Type: $NOTIFICATIONTYPE$\nHost: $HOSTNAME$\nState: $HOSTSTATE$\nAddress: $HOSTADDRESS$\nInfo: $HOSTOUTPUT$\n\nComment:$NOTIFICATIONCOMMENT" \
                                   | /usr/bin/sendxmpp -f /etc/naemon/sendxmpprc \
                                     --chatroom  $CONTACTADDRESS1$
 }
 
 define command {
-  command_name                   notify-by-jabber-user
+  command_name                   notify-host-by-jabber-user
   command_line                   /usr/bin/printf "%b" "Notification Type: $NOTIFICATIONTYPE$\nHost: $HOSTNAME$\nState: $HOSTSTATE$\nAddress: $HOSTADDRESS$\nInfo: $HOSTOUTPUT$\n\nComment:$NOTIFICATIONCOMMENT$" \
+                                  | /usr/bin/sendxmpp -f /etc/naemon/sendxmpprc \
+                                    $CONTACTADDRESS1$
+}
+
+define command {
+  command_name                   notify-service-by-jabber-chatroom-ssl
+  command_line                   /usr/bin/printf "%b" "Notification Type: $NOTIFICATIONTYPE$\nService: $SERVICEDESC$\nOutput: $SERVICEOUTPUT$\nHost: $HOSTNAME$\nState: $HOSTSTATE$\nAddress: $HOSTADDRESS$\nInfo: $HOSTOUTPUT$\n\nComment:$NOTIFICATIONCOMMENT$" \
+                                  | /usr/bin/sendxmpp -f /etc/naemon/sendxmpprc \
+                                    --ssl --no-tls-verify --chatroom $CONTACTADDRESS1$
+}
+
+define command {
+  command_name                   notify-service-by-jabber-user-ssl
+  command_line                   /usr/bin/printf "%b" "Notification Type: $NOTIFICATIONTYPE$\nService: $SERVICEDESC$\nOutput: $SERVICEOUTPUT$\nHost: $HOSTNAME$\nState: $HOSTSTATE$\nAddress: $HOSTADDRESS$\nInfo: $HOSTOUTPUT$\n\nComment:$NOTIFICATIONCOMMENT$" \
+                                  | /usr/bin/sendxmpp -f /etc/naemon/sendxmpprc \
+                                    --ssl --no-tls-verify $CONTACTADDRESS1$
+}
+
+define command {
+  command_name                   notify-service-by-jabber-chatroom
+  command_line                   /usr/bin/printf "%b" "Notification Type: $NOTIFICATIONTYPE$\nService: $SERVICEDESC$\nOutput: $SERVICEOUTPUT$\nHost: $HOSTNAME$\nState: $HOSTSTATE$\nAddress: $HOSTADDRESS$\nInfo: $HOSTOUTPUT$\n\nComment:$NOTIFICATIONCOMMENT$" \
+                                  | /usr/bin/sendxmpp -f /etc/naemon/sendxmpprc \
+                                    --chatroom  $CONTACTADDRESS1$
+}
+
+define command {
+  command_name                   notify-service-by-jabber-user
+  command_line                   /usr/bin/printf "%b" "Notification Type: $NOTIFICATIONTYPE$\nService: $SERVICEDESC$\nOutput: $SERVICEOUTPUT$\nHost: $HOSTNAME$\nState: $HOSTSTATE$\nAddress: $HOSTADDRESS$\nInfo: $HOSTOUTPUT$\n\nComment:$NOTIFICATIONCOMMENT$" \
                                   | /usr/bin/sendxmpp -f /etc/naemon/sendxmpprc \
                                     $CONTACTADDRESS1$
 }
