Add updates to make the image compatible with the 1.0.4-20150702 release of Naemon. This release broke a lot of things in the container due to the thruk changes.

--- a/data_dirs.env
+++ b/data_dirs.env
@@ -4,4 +4,7 @@ DATA_DIRS[((i++))]="/etc/nagios-plugins"
 DATA_DIRS[((i++))]="/var/log/naemon"
 DATA_DIRS[((i++))]="/var/cache/naemon"
 DATA_DIRS[((i++))]="/var/lib/naemon"
+DATA_DIRS[((i++))]="/etc/thruk"
+DATA_DIRS[((i++))]="/var/log/thruk"
+DATA_DIRS[((i++))]="/var/cache/thruk"
 export DATA_DIRS
