--- a/thruk_root_redirect.conf
+++ b/thruk_root_redirect.conf
@@ -1,6 +1,6 @@
 <Directory /var/www>
   RewriteEngine On
   RewriteBase /
-  RewriteCond %{REQUEST_URI} !^/naemon
-  RewriteRule ^(.*)$ /naemon/$1 [L]
+  RewriteCond %{REQUEST_URI} !^/thruk
+  RewriteRule ^(.*)$ /thruk/ [L]
 </Directory>
